# samplexplore

./: .gitignore  LICENSE  README.md  generate_binary.sh  generate_installer.sh  generate_resources.sh  icons.rc  pyproject.toml  resources.qrc  run.sh  setup.py
packaging/win32/: samplexplore.iss
pyinstaller/: create_binary.sh  runscript.py
scripts/: samplexplore.py
src/sample_explorer/: app.py  db.py  db_core.py  db_manager.py  media_slider.py  qrc_resources.py  rc_icons.py  settings.py  workers.py
src/samplexplore/: __main__.py  app.py  db_core.py  db_manager.py  fileutils.py  mediautils.py  rc_icons.py  settings.py  workers.py
tools/: remove_win_settings.ps1
