[tool.poetry]
name = "sample-explorer"
version = "0.1.0"
description = ""
authors = ["Marek Wiewiorski <marek@mwicat.com>"]
readme = "README.md"
packages = [{include = "sample_explorer", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
QtPy = "^2"
PySide2 = "^5"
pyqtconsole  = "^1.2"
formlayout = "^1.2"
peewee = "^3"

[tool.poetry.scripts]
samplexplore = "sample_explorer.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.8.0"
pillow = "^9.4.0"
peewee = "^3"
ipython = "^8"
