[tool.poetry]
name = "samplexplore"
version = "0.9.0"
description = ""
authors = ["Marek Wiewiorski <marek@mwicat.com>"]
readme = "README.md"
packages = [{include = "samplexplore", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
QtPy = "^2"
PySide2 = "^5"
pyqtconsole  = "^1.2"
peewee = "^3"

[tool.poetry.scripts]
samplexplore = "samplexplore.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
cx_Freeze = "^6.14"
ipython = "^8"
